--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,6 +5,10 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    steps:
-      - name: build
-        run: pwd && ls && make test
+  steps:
+    - name: Checkout code
+    uses: actions/checkout@v3
+    - name: Debug directory
+    run: ls -al
+    - name: build
+    run: make test
