--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,6 +3,13 @@ on:
   push:
     branches: [ "main" ]
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: build apps
+        run: make
   tests:
     runs-on: ubuntu-latest
     steps:
