--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v3
       - name: build apps
         run: make
+      - name: List files in repository
+        run: ls -R
   tests:
     runs-on: ubuntu-latest
     needs: build
@@ -24,6 +26,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
+      - name: List files in repository
+        run: ls -R
       - name: Ensure executable permissions
         run: chmod +x ./cat/s21_cat
       - name: Verify s21_cat exists
