--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
+      - name: build apps
+        run: make
       - name: List files in repository
         run: ls -R
       - name: Ensure executable permissions
