--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,15 +47,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: build apps
+        run: make
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCLOUD_CREDENTIALS }}
       - name: Copy files to server
         run: |
-          gcloud compute scp ./your_project_files \
-          $INSTANCE_NAME:~/ --zone $GCLOUD_ZONE
-      - name: Restart application
-        run: |
-          gcloud compute ssh $INSTANCE_NAME --zone $GCLOUD_ZONE --command \
-          "sudo systemctl restart your-service"
+          gcloud compute scp ./grep/s21_grep ./cat/s21_cat $INSTANCE_NAME:~/ --zone $GCLOUD_ZONE
