--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,7 +44,7 @@ jobs:
         run: pytest -s "integration tests/pythonProject/"
   deploy:
     runs-on: ubuntu-latest
-    needs: build_lin tests
+    needs: tests
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
